--- a/app/src/main/res/layout/activity_cat2.xml
+++ b/app/src/main/res/layout/activity_cat2.xml
@@ -157,26 +157,34 @@
         app:layout_constraintRight_toLeftOf="@+id/btnElem1"
         app:layout_constraintTop_toBottomOf="@+id/etElem4" />
 
+    <Button
+        android:id="@+id/btnC2versConf"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:onClick="onClickBtnC2versConf"
+        android:text="Configuration"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleCat2"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
     <HorizontalScrollView
         android:layout_width="368dp"
         android:layout_height="50dp"
         tools:layout_editor_absoluteX="8dp"
         android:id="@+id/horizontalScrollView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/titleCat2">
+        app:layout_constraintTop_toBottomOf="@+id/btnC2versConf">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnC2versConf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClickBtnC2versConf"
-                android:text="Configuration" />
 
             <Button
                 android:id="@+id/btnC2versC1"
@@ -187,12 +195,21 @@
                 android:text="Cat1" />
 
             <Button
+                android:id="@+id/btnC2versC2"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cat2" />
+
+            <Button
                 android:id="@+id/btnC2versC3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onClickBtnC2versC3"
                 android:text="Cat3" />
+
         </LinearLayout>
     </HorizontalScrollView>
 </android.support.constraint.ConstraintLayout>
