--- a/app/src/main/res/layout/activity_cat3.xml
+++ b/app/src/main/res/layout/activity_cat3.xml
@@ -157,26 +157,32 @@
         app:layout_constraintRight_toLeftOf="@+id/btnElem1"
         app:layout_constraintTop_toBottomOf="@+id/etElem4" />
 
+    <Button
+        android:id="@+id/btnC3versConf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:onClick="onClickBtnC3versConf"
+        android:text="Configuration"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleCat3" />
+
     <HorizontalScrollView
         android:layout_width="368dp"
         android:layout_height="50dp"
         tools:layout_editor_absoluteX="8dp"
         android:id="@+id/horizontalScrollView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/titleCat3">
+        app:layout_constraintTop_toBottomOf="@+id/btnC3versConf">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnC3versConf"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClickBtnC3versConf"
-                android:text="Configuration" />
 
             <Button
                 android:id="@+id/btnC3versC1"
@@ -192,6 +198,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:onClick="onClickBtnC3versC2"
+                android:text="Cat2" />
+
+            <Button
+                android:id="@+id/btnC3versC3"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="Cat3" />
         </LinearLayout>
     </HorizontalScrollView>
