--- a/app/src/main/res/layout/activity_lieux.xml
+++ b/app/src/main/res/layout/activity_lieux.xml
@@ -157,13 +157,27 @@
         app:layout_constraintRight_toLeftOf="@+id/btnElem1"
         app:layout_constraintTop_toBottomOf="@+id/etElem4" />
 
+    <Button
+        android:id="@+id/btnC1versConf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:onClick="onClickBtnC1versConf"
+        android:text="Configuration"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleCat2" />
+
     <HorizontalScrollView
         android:layout_width="368dp"
         android:layout_height="50dp"
         tools:layout_editor_absoluteX="8dp"
         android:id="@+id/horizontalScrollView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/titleCat2">
+        app:layout_constraintTop_toBottomOf="@+id/btnC1versConf">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -171,12 +185,12 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnC1versConf"
+                android:id="@+id/btnC1versC1"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="onClickBtnC1versConf"
-                android:text="Configuration" />
+                android:text="Cat1" />
 
             <Button
                 android:id="@+id/btnC1versC2"
@@ -193,6 +207,7 @@
                 android:layout_weight="1"
                 android:onClick="onClickBtnC1versC3"
                 android:text="Cat3" />
+
         </LinearLayout>
     </HorizontalScrollView>
 
