--- a/app/src/main/res/layout/activity_dynamic_try.xml
+++ b/app/src/main/res/layout/activity_dynamic_try.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="ady.ergo.tool.ergotool.DynamicTry">
 
+    <!--
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="346dp"
@@ -20,22 +21,20 @@
         android:layout_marginBottom="8dp">
 
     </RelativeLayout>
+    -->
 
     <ScrollView
-        android:layout_width="351dp"
-        android:layout_height="90dp"
+        android:id="@+id/scrollView2"
+        android:layout_width="360dp"
+        android:layout_height="261dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:id="@+id/scrollView2"
-        app:layout_constraintHorizontal_bias="0.529"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayout">
+        app:layout_constraintTop_toBottomOf="@+id/btnAddElement">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -45,5 +44,17 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="299dp"></LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnAddElement"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Add element"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
