--- a/app/src/main/res/layout/activity_cat2.xml
+++ b/app/src/main/res/layout/activity_cat2.xml
@@ -66,12 +66,15 @@
         android:id="@+id/titleCat2"
         android:layout_width="368dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
         android:text="Cat2"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etElem1"
@@ -159,21 +162,26 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:onClick="onClickBtnC2versConf"
         android:text="Configuration"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleCat2"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/titleCat2" />
 
     <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
         android:layout_width="368dp"
         android:layout_height="50dp"
-        tools:layout_editor_absoluteX="8dp"
-        android:id="@+id/horizontalScrollView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/btnC2versConf">
 
@@ -208,7 +216,6 @@
 
         </LinearLayout>
     </HorizontalScrollView>
-
 
 
 </android.support.constraint.ConstraintLayout>
