--- a/app/src/main/res/layout/activity_cat3.xml
+++ b/app/src/main/res/layout/activity_cat3.xml
@@ -71,7 +71,10 @@
         android:text="Cat3"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/etElem1"
@@ -172,10 +175,13 @@
     <HorizontalScrollView
         android:layout_width="368dp"
         android:layout_height="50dp"
-        tools:layout_editor_absoluteX="8dp"
         android:id="@+id/horizontalScrollView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnC3versConf">
+        app:layout_constraintTop_toBottomOf="@+id/btnC3versConf"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
