--- a/app/src/main/res/layout/activity_lieux.xml
+++ b/app/src/main/res/layout/activity_lieux.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
     <TextView
-        android:id="@+id/titleCat2"
+        android:id="@+id/titleCat1"
         android:layout_width="368dp"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
@@ -71,7 +71,10 @@
         android:text="Cat1"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/etElem1"
@@ -160,17 +163,20 @@
         android:text="Configuration"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleCat2"
+        app:layout_constraintTop_toBottomOf="@+id/titleCat1"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
     <HorizontalScrollView
         android:layout_width="368dp"
         android:layout_height="50dp"
-        tools:layout_editor_absoluteX="8dp"
         android:id="@+id/horizontalScrollView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnC1versConf">
+        app:layout_constraintTop_toBottomOf="@+id/btnC1versConf"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
